--- a/who-we-are/partners.html
+++ b/who-we-are/partners.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" type="text/css" href="../css/banner.css" />
     <link rel="stylesheet" type="text/css" href="../css/iconochive.css" />
-<!-- End Wayback Rewrite JS Include -->
+<!-- End  Rewrite JS Include -->
 
   <base href="/partners.html"/>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
@@ -325,7 +325,7 @@ background-color: #be0926 !important;
 
 </head>
 
-<body><!-- BEGIN WAYBACK TOOLBAR INSERT -->
+<body><!-- BEGIN  TOOLBAR INSERT -->
 <script>__wm.rw(0);</script>
 <div id="wm-ipp-base" lang="en" style="display:none;direction:ltr;">
 <div id="wm-ipp" style="position:fixed;left:0;top:0;right:0;">
@@ -338,7 +338,7 @@ background-color: #be0926 !important;
 </div><div id="wm-ipp-inside">
   <div id="wm-toolbar" style="position:relative;display:flex;flex-flow:row nowrap;justify-content:space-between;">
     <div id="wm-logo" style="/*width:110px;*/padding-top:12px;">
-      <a href="" title="Wayback Machine home page"><img src="../images/wayback-toolbar-logo-200.png" srcset="" alt="Wayback Machine" style="width:100px" border="0" /></a>
+      <a  title=" home page"><img src="../images/wayback-toolbar-logo-200.png" srcset="" alt="" style="width:100px" border="0" /></a>
     </div>
     <div class="c" style="display:flex;flex-flow:column nowrap;justify-content:space-between;flex:1;">
       <form class="u" style="display:flex;flex-direction:row;flex-wrap:nowrap;" target="_top" method="get" action="/web/submit" name="wmtb" id="wmtb"><input type="text" name="url" id="wmtbURL" value="/partners.html" onfocus="this.focus();this.select();" style="flex:1;"/><input type="hidden" name="type" value="replay" /><input type="hidden" name="date" value="20151127074823" /><input type="submit" value="Go" />
@@ -347,7 +347,7 @@ background-color: #be0926 !important;
                 <div class="s" id="wm-nav-captures" style="flex:1;">
           </div>
         <div class="k">
-          <a href="" id="wm-graph-anchor">
+          <a  id="wm-graph-anchor">
             <div id="wm-ipp-sparkline" title="Explore captures for this URL" style="position: relative">
               <canvas id="wm-sparkline-canvas" width="725" height="27" border="0"></canvas>
             </div>
@@ -384,15 +384,15 @@ background-color: #be0926 !important;
                 <span class="xxs">
           <div id="wm-save-snapshot-success">success</div>
           <div id="wm-save-snapshot-fail">fail</div>
-          <a id="wm-save-snapshot-open" href="#" title="Share via My Web Archive" >
+          <a id="wm-save-snapshot-open" href="#" title="Share via My Web" >
             <span class="iconochive-web"></span>
           </a>
-          <a href="" title="Sign In" id="wm-sign-in">
+          <a title="Sign In" id="wm-sign-in">
             <span class="iconochive-person"></span>
           </a>
           <span id="wm-save-snapshot-in-progress" class="iconochive-web"></span>
         </span>
-                <a class="xxs" href="" title="Get some help using the Wayback Machine" style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
+                <a class="xxs" title="Get some help using the " style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
         <a id="wm-tb-close" href="#close" style="top:-2px;" title="Close the toolbar"><span class="iconochive-remove-circle" style="color:#888888;font-size:240%;"></span></a>
       </div>
       <div id="wm-share" class="xxs">
@@ -401,11 +401,11 @@ background-color: #be0926 !important;
            title="screenshot">
           <span class="wm-icon-screen-shot"></span>
         </a>
-        <a href="" id="wm-video" title="video">
+        <a id="wm-video" title="video">
           <span class="iconochive-movies"></span>
         </a>
-        <a id="wm-share-facebook" href="" data-url="/partners.html" title="Share on Facebook" style="margin-right:5px;" target=""><span class="iconochive-facebook" style="color:#3b5998;font-size:160%;"></span></a>
-        <a id="wm-share-twitter" href="" data-url="/partners.html" title="Share on Twitter" style="margin-right:5px;" target=""><span class="iconochive-twitter" style="color:#1dcaff;font-size:160%;"></span></a>
+        <a id="wm-share-facebook" data-url="/partners.html" title="Share on Facebook" style="margin-right:5px;" target=""><span class="iconochive-facebook" style="color:#3b5998;font-size:160%;"></span></a>
+        <a id="wm-share-twitter" data-url="/partners.html" title="Share on Twitter" style="margin-right:5px;" target=""><span class="iconochive-twitter" style="color:#1dcaff;font-size:160%;"></span></a>
       </div>
       <div style="padding-right:2px;text-align:right;white-space:nowrap;">
         <a id="wm-expand" class="wm-btn wm-closed" href="#expand" onclick="__wm.ex(event);return false;"><span id="wm-expand-icon" class="iconochive-down-solid"></span> <span class="xxs" style="font-size:80%;">About this capture</span></a>
@@ -419,18 +419,18 @@ background-color: #be0926 !important;
     <div style="padding:3px;position:relative" id="wm-collected-by-content">
             <div style="display:inline-block;vertical-align:top;width:50%;">
 			<span class="c-logo" style="background-image:url(/images/webwidecrawl.jpeg);"></span>
-		Organization: <a style="color:#33f;" href="" target=""><span class="wm-title">Alexa Crawls</span></a>
+		Organization: <a style="color:#33f;" target=""><span class="wm-title">Alexa Crawls</span></a>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
-	  Starting in 1996, <a href="">Alexa Internet</a> has been donating their crawl data to the Internet Archive.  Flowing in every day, these data are added to the <a href="">Wayback Machine</a> after an embargo period.
+	  Starting in 1996, <a>Alexa Internet</a> has been donating their crawl data to the Internet.  Flowing in every day, these data are added to the <a></a> after an embargo period.
 	</div>
 	      </div>
       <div style="display:inline-block;vertical-align:top;width:49%;">
 			<span class="c-logo" style="background-image:url(/images/wide00013.jpeg)"></span>
-		<div>Collection: <a style="color:#33f;" href="" target=""><span class="wm-title">Alexa Crawls</span></a></div>
+		<div>Collection: <a style="color:#33f;" target=""><span class="wm-title">Alexa Crawls</span></a></div>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
-	  Starting in 1996, <a href="">Alexa Internet</a> has been donating their crawl data to the Internet Archive.  Flowing in every day, these data are added to the <a href="">Wayback Machine</a> after an embargo period.
+	  Starting in 1996, <a>Alexa Internet</a> has been donating their crawl data to the Internet.  Flowing in every day, these data are added to the <a></a> after an embargo period.
 	</div>
 	      </div>
     </div>
@@ -442,9 +442,9 @@ background-color: #be0926 !important;
       <div id="wm-capresources-loading" style="text-align:left;margin:0 20px 5px 5px;display:none"><img src="/images/loading.gif" alt="loading" /></div>
     </div>
     </div>
-  </div></div></div></div><div id="wm-ipp-print">The Wayback Machine - /who-we-are/partners.html</div>
+  </div></div></div></div><div id="wm-ipp-print">The  - /who-we-are/partners.html</div>
 
-<!-- END WAYBACK TOOLBAR INSERT -->
+<!-- END TOOLBAR INSERT -->
  
 	<div id="bando">
 	</div>
@@ -599,7 +599,7 @@ window.onload = init16();
                 <div id="pied_news"></div>
                 </div>
                 <div style="padding-left: 50%; margin-left: -34px;">
-                								<a href="" target=""><div id="fp72"></div></a>
+                								<a target=""><div id="fp72"></div></a>
                 </div>
             </div>
                         <div id="contenu"> <div style="width:493px;">                       
@@ -626,7 +626,7 @@ window.onload = init16();
 <table style="width: 551px; height: 445px;" border="0">
 <tbody>
 <tr>
-<td><a href="" target=""><img style="border: 0px;" alt="ITM" src="" width="100" height="135"/></a></td>
+<td><a target=""><img style="border: 0px;" alt="ITM" src="" width="100" height="135"/></a></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"> </span></span></span><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Institute of Tropical Medicine (ITM)<br/></strong></span><span style="font-size: 10pt;">Antwerpen, Belgium</span></span></span></p>
@@ -636,7 +636,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="IT._jpg" src="" width="100" height="18"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a target=""><img style="border: 0px;" alt="IT._jpg" src="" width="100" height="18"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Inserm-Transfert SA (IT)<br/></strong>Paris, France<br/><br/></span></span></span><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;">Natacha Edme<br/></span></span>
@@ -648,7 +648,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="UNIGE70" src="" width="100" height="36"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a target=""><img style="border: 0px;" alt="UNIGE70" src="" width="100" height="36"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Université de Genève (UNIGE)<br/></strong>Geneva, Switzerland<br/><br/></span>François Chappuis °<br/>Ninon Horie</span></span></p>
@@ -656,7 +656,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="391-Lshtm-Logo" src="" width="100" height="122"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a target=""><img style="border: 0px;" alt="391-Lshtm-Logo" src="" width="100" height="122"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>London School of Hygiene and Tropical Medicine (LSHTM)<br/></strong>London, United-Kingdom<br/><br/></span>Michael Miles °<br/>Rosanna Peeling</span></span></p>
@@ -672,7 +672,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="ugm_logo" src="" width="100" height="104"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a target=""><img style="border: 0px;" alt="ugm_logo" src="" width="100" height="104"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Gadjah Mada University (FM GMU)<br/></strong>Yogyakarta, Indonesia<br/><br/></span>Yodi Mahendradhata °<br/>Riris Andono Ahmad<br/>Bintari Dwihardiani<br/>Elsa Herdiana</span></span></p>
@@ -688,7 +688,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"> <a href="" target=""><img style="border-width: 0px; border-style: none;" alt="Swiss_TPH" src="" width="100" height="36"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"> <a target=""><img style="border-width: 0px; border-style: none;" alt="Swiss_TPH" src="" width="100" height="36"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Swiss Tropical and Public Health Institute (Swiss TPH)<br/></strong>Basel, Switzerland<br/><br/></span>Jürg Utzinger°<br/>Stefanie Knopp<br/>Peter Steinmann<br/>Penelope Vounatsou <br/>Eliezer K. N'Goran</span></span></p>
@@ -704,7 +704,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="BPKIHS" src="/web/20151127074823im_/http://www.nidiag.org/images/stories/BPKIHS.jpg" width="100" height="98"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a target=""><img style="border: 0px;" alt="BPKIHS" src="/web/20151127074823im_/http://www.nidiag.org/images/stories/BPKIHS.jpg" width="100" height="98"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>B.P. Koirala Institute of Health Sciences (BPKIHS)<br/></strong>Dharan, Nepal<br/></span><br/>Suman Rijal°<br/>Basudha Khanal<br/>Bickram Pradhan<br/>Narayan Bhattarai<br/>Surendra Uranw</span></span></p>
@@ -712,7 +712,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="UNKA" src="" width="100" height="102"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a target=""><img style="border: 0px;" alt="UNKA" src="" width="100" height="102"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>University of Khartoum (UNKA)<br/></strong>Khartoum, Sudan<br/></span><br/>Sayda El Safi °<br/>Al farazdag Saad Ageed<br/>Osman Salih Osman<br/>Nuha Galal</span></span></p>
@@ -720,7 +720,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="SHCH" src="" width="100" height="49"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a target=""><img style="border: 0px;" alt="SHCH" src="" width="100" height="49"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Sihanouk Hospital Corporation (SHCH)<br/></strong>Phnom Penh, Cambodia / USA<br/></span><br/>Lim Kruy °<br/>Sopheak Thai<br/>Keo Rotha<br/>Teav Syna<br/>Shelly Malhotra</span></span></p>
@@ -758,7 +758,7 @@ window.onload = init16();
 <a id="menu4631" href="../copyright.html">Copyright</a>
 </td> 
 <td class="last46"> 
-<a id="menu4632" href="" target="">By MLCOM</a>
+<a id="menu4632" target="">By MLCOM</a>
 </td> 
 </tr> 
 </table></div> 
